--- a/package.json
+++ b/package.json
@@ -9,11 +9,23 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "build:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt build",
+    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "express": "^4.17.1",
+    "gsap": "^3.3.1",
+    "isotope-layout": "^3.0.6",
+    "masonry-layout": "^4.2.2",
+    "mongoose": "^5.9.18",
     "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.3.6"
+    "scrollreveal": "^4.0.6",
+    "vue-infinite-scroll": "^2.0.2",
+    "waterfall": "^3.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
